--- a/bitext/bank_dataset.ipynb
+++ b/bitext/bank_dataset.ipynb
@@ -19,7 +19,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -45,7 +45,16 @@
         "id": "rWRLfS0AdRtl",
         "outputId": "5331c186-bb18-4667-f879-e7387bf0ffcc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\visha\\miniconda3\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from datasets import load_dataset\n",
         "\n",
@@ -70,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +146,7 @@
         "for column in df.columns:\n",
         "    unique_values = df[column].unique()\n",
         "    print(f\"Feature: {column}\")\n",
-        "    print(f\"Unique Values: {unique_values[:10]}\")  # Display first 10 unique values\n",
+        "    print(f\"Unique Values: {unique_values[:]}\")  # Display first 10 unique values\n",
         "    print(f\"Total Unique Values: {len(unique_values)}\")\n",
         "    print(\"-\" * 50)"
       ]
@@ -423,7 +432,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "base",
+      "display_name": "mchatbot",
       "language": "python",
       "name": "python3"
     },
@@ -437,7 +446,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.9"
+      "version": "3.13.2"
     }
   },
   "nbformat": 4,
